# libgatha

./: .gitignore  AUTHORS  BUGS  Doxyfile  Makefile  Makefile.am  Makefile.in  README.md  config.h  config.h.in  config.status  configure  configure.ac  libtool
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
examples/: Makefile  Makefile.am  Makefile.in  mcb  mcb.c  sastry  sastry.c  sfp  sfp.c  visualization  visualization.c  visualization_mcb  visualization_mcb.c  visualization_sfp  visualization_sfp.c
examples/.deps/: mcb.Po  sastry.Po  sfp.Po  visualization.Po  visualization_mcb.Po  visualization_sfp.Po
examples/.libs/: lt-visualization  lt-visualization_mcb  lt-visualization_sfp  mcb  sastry  sfp  visualization  visualization_mcb  visualization_sfp
examples/games/: battle_of_sexes  prisonner_dilemma  rock_paper_scissors  rock_paper_scissors_bazooka
examples/games/2/: 0_0  0_1  0_10  0_11  0_12  0_13  0_14  0_15  0_16  0_17  0_18  0_19  0_2  0_20  0_21  0_22  0_23  0_3  0_4  0_5  0_6  0_7  0_8  0_9  10_0  10_1  10_10  10_11  10_12  10_13  10_14  10_15  10_16  10_17  10_18  10_19  10_2  10_20  10_21  10_22  (+536 more)
examples/games/3/: 0  1  10  100  101  102  103  104  105  106  107  108  109  11  110  111  112  113  114  115  116  117  118  119  12  120  121  122  123  124  125  126  127  128  129  13  130  131  132  133  (+960 more)
lib/: Makefile  Makefile.am  Makefile.in  cairo_margin.c  cairo_margin.h  cairo_payoff_chart.c  cairo_payoff_chart.h  cairo_pvect_array.c  cairo_pvect_array.h  cairo_pvect_timeline.c  cairo_pvect_timeline.h  cairo_report.c  cairo_report.h  cairo_save.c  cairo_save.h  cairo_single_payoff_chart.c  cairo_single_payoff_chart.h  cairo_timeline.c  cairo_timeline.h  convergence.c  convergence.h  game.c  game.h  gatha.h  libgatha.la  mcb.c  mcb.h  payoff_matrix.c  payoff_matrix.h  sastry.c  sastry.h  sfp.c  sfp.h  types.h
lib/.deps/: game.Plo  libgatha_la-best_response.Plo  libgatha_la-cairo_margin.Plo  libgatha_la-cairo_payoff_chart.Plo  libgatha_la-cairo_pvect_array.Plo  libgatha_la-cairo_pvect_timeline.Plo  libgatha_la-cairo_report.Plo  libgatha_la-cairo_save.Plo  libgatha_la-cairo_single_payoff_chart.Plo  libgatha_la-cairo_timeline.Plo  libgatha_la-convergence.Plo  libgatha_la-game.Plo  libgatha_la-mcb.Plo  libgatha_la-payoff_matrix.Plo  libgatha_la-sastry.Plo  libgatha_la-sfp.Plo  libgatha_la-visualization_cairo.Plo  mcb.Plo  payoff_matrix.Plo  sastry.Plo
lib/.libs/: libgatha.la  libgatha.lai  libgatha.so.0.0.0
(+114 files in other folders)
